// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateYAML > keeps snapshot coverage for copilot compose variants 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 1/1/2024, 12:00:00 AM

# ==================================================
# Support Information
# ==================================================
# If you encounter any issues or need technical support:
# - Join our QQ group: 610394020
# - Join our Discord community: https://discord.gg/qY662sJK
# - We provide real-time assistance and solutions
# - Share your experiences and connect with other users

services:
  hagicode:
    image: newbe36524/hagicode:1.2.3-copilot
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Copilot CLI Runtime Configuration
      # Uses COPILOT_* environment variables
      # ==================================================
      COPILOT_API_KEY: "test-copilot-key"
      # COPILOT_BASE_URL: optional, uses default if not set
    ports:
      - "8080:45000"
    volumes:
      - /workspace:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

  copilot-cli:
    image: newbe36524/hagicode:1.2.3-copilot
    container_name: hagicode-copilot
    environment:
      COPILOT_API_KEY: "test-copilot-key"
    working_dir: /workspace
    volumes:
      - /workspace:/workspace
    command: ["sleep", "infinity"]
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`generateYAML > keeps snapshot coverage for copilot compose variants 2`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 1/1/2024, 12:00:00 AM

# ==================================================
# Support Information
# ==================================================
# If you encounter any issues or need technical support:
# - Join our QQ group: 610394020
# - Join our Discord community: https://discord.gg/qY662sJK
# - We provide real-time assistance and solutions
# - Share your experiences and connect with other users

services:
  hagicode:
    image: newbe36524/hagicode:1.2.3-copilot
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Copilot CLI Runtime Configuration
      # Uses COPILOT_* environment variables
      # ==================================================
      COPILOT_API_KEY: "test-copilot-key"
      # COPILOT_BASE_URL: optional, uses default if not set
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

  copilot-cli:
    image: newbe36524/hagicode:1.2.3-copilot
    container_name: hagicode-copilot
    environment:
      COPILOT_API_KEY: "test-copilot-key"
    working_dir: /workspace
    command: ["sleep", "infinity"]
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;
